fixed menu button z-index

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
   position: fixed;
   top: 0;
   right: 0;
-  background-color: #2a2a2a; }
+  background-color: #2a2a2a;
+  z-index: 1000; }
   .btn-navi a {
     display: block;
     padding: 20px;
@@ -25,7 +26,7 @@
   background-color: #2a2a2a;
   height: 100%;
   padding: 100px 30px;
-  z-index: 1000; }
+  z-index: 1100; }
   #menu-navi .close {
     position: absolute;
     top: 0;
